--- a/index-START.html
+++ b/index-START.html
@@ -9,9 +9,10 @@
 
     <div class="clock">
       <div class="clock-face">
-        <div class="hand hour-hand"></div>
-        <div class="hand min-hand"></div>
-        <div class="hand second-hand"></div>
+        <div id="hand3" class="hand hour-hand"></div>
+        <div id="hand2" class="hand min-hand"></div>
+        <div id="hand1" class="hand second-hand"></div>
+        <div class="clock-centre">
       </div>
     </div>
 
@@ -37,7 +38,7 @@
     .clock {
       width: 30rem;
       height: 30rem;
-      border:40px solid white;
+      border:20px solid white;
       border-radius:50%;
       margin:50px auto;
       position: relative;
@@ -56,6 +57,19 @@
       transform: translateY(-3px); /* account for the height of the clock hands */
     }
 
+    .clock-centre {
+      position: absolute;
+      top: 130px;
+      right: 130px;
+      width: 1rem;
+      height: 1rem;
+      border:2rem solid white;
+      z-index: -10;
+      border-radius: 30px;
+
+
+    }
+
     .hand {
       width:50%;
       height:6px;
@@ -68,8 +82,45 @@
       transition-timing-function: cubic-bezier(0, 0.76, 0, 1.72);
     }
 
-  </style>
+    .hand2 {
+      width:45%;
+      height:6px;
+      background:red;
+      position: absolute;
+      top:50%;
+      transform-origin: 105%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0, 0.76, 0, 1.72);
+    }
 
+    .hand3 {
+      width:40%;
+      height:6px;
+      background:yellow;
+      position: absolute;
+      top:50%;
+      transform-origin: 110%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0, 0.76, 0, 1.72);
+    }
+
+    #hand2 {
+      width:45%;
+      transform-origin: 105%;
+      background:red;
+    }
+
+    #hand3 {
+      width:40%;
+      transform-origin: 110%;
+      background:yellow;
+    }
+
+
+  </style>
+  
   <script>
 
       const secondHand = document.querySelector('.second-hand');
@@ -87,7 +138,7 @@
         const hoursDegrees = ((hours/60) * 360) + 90;
         
         console.log("[sec-degs: " + (secondsDegrees - 90) % 360 + " secs: " + seconds + 
-          "]" +   "[min-degs: " + (minsDegrees - 90) % 360 + " mins: " + minutes + "]" +
+          "]" +   "[min-degs: " + (minsDegrees - 90)%360 + " mins: " + minutes + "]" +
         "[hour-degs: " + (hoursDegrees - 90) % 360 + " hours: " + hours + "]");
 
         secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
@@ -98,6 +149,6 @@
       setInterval(setDate, 1000);
 
   </script>
-  
+
 </body>
 </html>
