added modified styling...background change to black

--- a/index-START.html
+++ b/index-START.html
@@ -19,7 +19,8 @@
 
   <style>
     html {
-      background:#018DED url(http://unsplash.it/1500/1000?image=881&blur=50);
+      /* background:#018DED url(http://unsplash.it/1500/1000?image=881&blur=50); */
+      background-color: black;
       background-size:cover;
       font-family:'helvetica neue';
       text-align: center;
@@ -73,7 +74,7 @@
     .hand {
       width:50%;
       height:6px;
-      background:black;
+      background:white;
       position: absolute;
       top:50%;
       transform-origin: 100%;
@@ -82,30 +83,7 @@
       transition-timing-function: cubic-bezier(0, 0.76, 0, 1.72);
     }
 
-    .hand2 {
-      width:45%;
-      height:6px;
-      background:red;
-      position: absolute;
-      top:50%;
-      transform-origin: 105%;
-      transform: rotate(90deg);
-      transition: all 0.05s;
-      transition-timing-function: cubic-bezier(0, 0.76, 0, 1.72);
-    }
-
-    .hand3 {
-      width:40%;
-      height:6px;
-      background:yellow;
-      position: absolute;
-      top:50%;
-      transform-origin: 110%;
-      transform: rotate(90deg);
-      transition: all 0.05s;
-      transition-timing-function: cubic-bezier(0, 0.76, 0, 1.72);
-    }
-
+    
     #hand2 {
       width:45%;
       transform-origin: 105%;
